Add loom pinning tests (#8289)